--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 
     "title": "Badlion Premium",
 
-    "description": "Badlion Premium ist der nächste Level im Minecraft Gaming. Riesige Verbesserungen in der Spieleleistung und Zugriff auf Turniere/Ligen“
+    "description": "Badlion Premium ist das nächste Level im Minecraft Gaming. Große Verbesserungen in der Spieleleistung und Zugriff auf Turniere/Ligen“
   },
 
   "articles": {
@@ -28,11 +28,11 @@
 
     "support": {
 
-      "alt": "Lowest Ping",
+      "alt": "Niedrigster Ping",
 
-      "title": "Lowest Ping",
+      "title": "Niedrigster Ping",
 
-      "body": „Wir werden mehr als ein Dutzend Standorte einführen, um den niedrigst möglichen Ping zu garantieren. Mehr Standorte kommen im Jahr 2017“
+      "body": „Wir werden mehr als ein Dutzend neue Serverstandorte einführen, um den niedrigst möglichen Ping zu garantieren. Mehr Standorte erscheinen im Jahr 2017"
 
     },
 
@@ -42,7 +42,7 @@
 
       "title": „Chat/Freund System",
 
-      "body": „Direkt in den Badlion PvP Klienten, und in den Badlion Client ist es ein komplettes Chat/Freunde System eingebaut, um Tag und Nacht zu kommunizieren“ 
+      "body": „Direkt in dem Badlion Pvp Client und dem Badlion Client ist ein komplettes Chat/Freunde System eingebaut um Tag und Nacht zu kommunizieren"
     },
 
     "matchmaking": {
