--- a/.gitignore
+++ b/.gitignore
@@ -38,11 +38,11 @@
 
     "chat": {
 
-      "alt": „Chat/Freund System",
+      "alt": „Chat/Freunde System",
 
-      "title": „Chat/Freund System",
+      "title": „Chat/Freunde System",
 
-      "body": „Beinhaltet im Badlion PvP Klient und in den Badlion Klient ist es ein komplettes Chat/Freunde System eingebaut, um Tag und Nacht zu kommunizieren“ 
+      "body": „Enthalten im Badlion PvP Klient ist es ein komplettes Chat/Freunde System, um Tag und Nacht zu kommunizieren“ 
     },
 
     "matchmaking": {
